--- a/myapp/example.env
+++ b/myapp/example.env
@@ -8,5 +8,5 @@ DB_HOST=localhost
 DB_PORT=27017
 
 #COORDINATES TO START SEED
-LATITUDE=19.517494
-LONGITUDE=-99.0121012
+LATITUDE=19.429350
+LONGITUDE=-99.178106
