--- a/myapp/example.env
+++ b/myapp/example.env
@@ -6,6 +6,7 @@ DB_USER=helpdev
 DB_PASS=123456
 DB_HOST=localhost
 DB_PORT=27017
+DB_NAME=taxi24_db
 
 #COORDINATES TO START SEED
 LATITUDE=19.429350
