--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taxi24",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "description": "API FOR Taxi24 ",
   "main": "index.js",
@@ -11,22 +11,24 @@
     "test:dev": "jest --testEnvironment=node --runInBand --watch"
   },
   "dependencies": {
+    "continuation-local-storage": "^3.2.1",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-http-context": "^1.2.4",
-    "express-logger-unique-req-id": "^1.0.4",
     "express-validator": "^6.9.2",
     "http-errors": "~1.6.3",
     "jest": "^29.5.0",
+    "moment": "^2.29.4",
     "mongodb-memory-server": "^8.12.2",
     "mongoose": "^5.11.15",
     "morgan": "~1.9.1",
     "pug": "^3.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "supertest": "^6.3.3"
